<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nebojsa.twofactsonefake.StatsActivity"
    android:id="@+id/pointsWonTextView"
    android:background="@color/home_background_color">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/main_light_blue_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/highScore"
                android:id="@+id/highScoreTextView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/home_background_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/highScoreValueTextView"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="4dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/home_background_color" />
        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/home_background_color">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/correctAnswersTextView"
                android:id="@+id/correctAnswerTextView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:textColor="@color/main_light_blue_color"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/correctAnswersValueTextView"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/main_light_blue_color"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_light_blue_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wrongAnswersTextView"
                android:id="@+id/wrongAnswerTextView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/home_background_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/wrongAnswersValueTextView"
                android:layout_alignTop="@+id/wrongAnswerTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/home_background_color" />
        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_background_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gamesPlayedTextView"
                android:id="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:textColor="@color/main_light_blue_color"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/gamesPlayedTextView"
                android:layout_alignParentLeft="false"
                android:textColor="@color/main_light_blue_color"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="4dp"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_light_blue_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/correctAnswersPercentage"
                android:id="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/home_background_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/correctAnswersPercentageTextView"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:textColor="@color/home_background_color" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_background_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/helpsUsed"
                android:id="@+id/textView24"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:textColor="@color/main_light_blue_color"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/helpsUsedTextView"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:textColor="@color/main_light_blue_color" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
